--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,24 +4,29 @@
   box-sizing: border-box;
 }
 
+body {
+  background-color: #222;
+  margin: 0;
+}
+
 .container {
   font-family: Roboto,
     sans-serif;
   display: flex;
-	align-items: center;
-	justify-content: center;
-	height: 100vh;
+  align-items: center;
+  justify-content: center;
+  margin: auto;
   width: 100%;
-  background-color: #222;
+  height: 100vh;
 }
 
-.swiper {
-  width: 80%;
-  height: fit-content;
-}
-
-.slides img {
+img {
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
   width: 100%;
+  height: 100vh;
+  margin: auto;
 }
 
 .swipe-btn-next,
@@ -39,9 +44,9 @@
 }
 
 .swipe-btn-next {
-  right: 1%;
+  right: 2%;
 }
 
 .swipe-btn-prev {
-  left: 1%;
+  left: 2%;
 }
